--- a/localhost.rc
+++ b/localhost.rc
@@ -1,4 +1,4 @@
 ^set SAVETO "."
-^set ROOT "/home/livingRoom/temperature"
-^set DEBUG "FALSE"
-^set NODE "localhost"
+^set ROOT /home/livingRoom/temperature
+^set DEBUG FALSE
+^set NODE localhost
